# ml-end-to-end-churn-prediction

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  azure.yaml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
app/: app.py
logs/: predictions.jsonl
models/: feature_columns.json  model_metadata.json  model_metrics.json  training_baseline.json  version_registry.json
models/versions/: 20260328_165233_LogisticRegression.joblib
notebooks/: eda.ipynb
src/: __init__.py  config.py  data_preprocessing.py  drift_monitoring.py  evaluate.py  experiment_tracking.py  explainability.py  feature_engineering.py  model_versioning.py  monitoring.py  predict.py  rate_limiting.py  schemas.py  train.py  utils.py
tests/: conftest.py  test_api.py  test_explainability.py  test_integration.py  test_monitoring.py  test_predict.py  test_train.py  test_versioning.py
